--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ Thumbs.db
 # Файлы редактора
 .vscode/
 .idea/
-
+.venv/
+venv/
 # Локальные фото (если хотите их хранить локально)
-#/photos/
+#git add ./photos/
