--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,21 @@
+# Создадим .gitignore
+cat > .gitignore << 'EOF'
 # Системные файлы
 .DS_Store
 Thumbs.db
 
-# Файлы редактора
+# Редакторы
 .vscode/
 .idea/
+
+# Виртуальные окружения
 .venv/
 venv/
-# Локальные фото (если хотите их хранить локально)
-#git add ./photos/
+
+# Кэш Python
+__pycache__/
+*.pyc
+
+# Локальные фото (если будут)
+/photos/
+EOF
