--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,10 @@
-# Создадим .gitignore
-cat > .gitignore << 'EOF'
-# Системные файлы
 .DS_Store
-Thumbs.db
-
-# Редакторы
-.vscode/
-.idea/
-
-# Виртуальные окружения
 .venv/
 venv/
-
-# Кэш Python
 __pycache__/
 *.pyc
-
-# Локальные фото (если будут)
-/photos/
-EOF
-/photos/
+.vscode/
+.idea/
+node_modules/
+npm-debug.log*
+# НЕ добавляем site-photos/ здесь!
